# 20260705-ice-cream-dataops

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml
.ona/: automations.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
