[project]
name = "20260705-ice-cream-dataops"
version = "0.1.0"
description = "desctiption"
authors = [
    {name = "HikaruMaruyama",email = "7115497+hmaruyama@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "cognite-toolkit (==0.6.53)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
